--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<meta name="viewport" content="width=320, height=480,initial-scale=1.0,minimum-scale=1.0,maximum-scale=2.0,user-scalable=yes" />
 		<link rel="stylesheet" href="./css/style.css" />
 		<script src="./javascript/jquery.min.js" type="text/javascript"></script>
 		<script src="./javascript/wScratchPad.js" type="text/javascript"></script>
@@ -9,9 +10,13 @@
 	<body>
 		<div id="wScratchPad"></div>
 		<br>
-		<button onclick="reset();">もう一回</button>
-		<button onclick="clearpad();">全削り</button>
+		<div id="scratchButton">
+			<button onclick="reset();">もう一回</button>
+			<button onclick="clearpad();">全削り</button>
+		</div>
 		<script type="text/javascript">
+			let screenWidth = screen.width;
+			let screenHeight = screen.height;
 			const results = [
 				'./images/omikuji_daikichi.png',
 				'./images/omikuji_chuukichi.png',
@@ -22,6 +27,7 @@
 				'./images/omikuji_daikyou.png'
 			];
 			var rNo = Math.floor(Math.random() * results.length);
+			//181,400
 			$("#wScratchPad").wScratchPad({width:181,height:400,image:results[rNo],color:'#808080',cursor:'./images/coin.png',size:10});
 			function reset(){
 				rNo = Math.floor(Math.random() * results.length);
