--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=320, height=480,initial-scale=1.0,minimum-scale=1.0,maximum-scale=2.0,user-scalable=yes" />
 		<link rel="stylesheet" href="./css/style.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=M+PLUS+1:wght@100;500&family=Shippori+Mincho+B1:wght@800&family=Zen+Maru+Gothic:wght@500&display=swap" rel="stylesheet">
 		<script src="./javascript/jquery.min.js" type="text/javascript"></script>
 		<script src="./javascript/wScratchPad.js" type="text/javascript"></script>
 	</head>
+	<div id="header">
+        年賀状
+    </div>
+	<div id="sentence">
+		あけましておめでとうございます!!<br>
+		今年もよろしくね～
+	</div>
 	<body>
 		<div id="wScratchPad"></div>
 		<br>
@@ -27,7 +37,6 @@
 				'./images/omikuji_daikyou.png'
 			];
 			var rNo = Math.floor(Math.random() * results.length);
-			//181,400
 			$("#wScratchPad").wScratchPad({width:181,height:400,image:results[rNo],color:'#808080',cursor:'./images/coin.png',size:10});
 			function reset(){
 				rNo = Math.floor(Math.random() * results.length);
