--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<script src="./javascript/wScratchPad.js" type="text/javascript"></script>
 	</head>
 	<div id="header">
-        年賀状
+        おみくじ付き年賀状
     </div>
 	<div id="sentence">
 		あけましておめでとうございます!!<br>
@@ -19,7 +19,6 @@
 	</div>
 	<body>
 		<div id="wScratchPad"></div>
-		<br>
 		<div id="scratchButton">
 			<button onclick="reset();">もう一回</button>
 			<button onclick="clearpad();">全削り</button>
@@ -29,9 +28,15 @@
 			let screenHeight = screen.height;
 			const results = [
 				'./images/omikuji_daikichi.png',
+				'./images/omikuji_daikichi.png',
+				'./images/omikuji_daikichi.png',
+				'./images/omikuji_chuukichi.png',
 				'./images/omikuji_chuukichi.png',
 				'./images/omikuji_syoukichi.png',
+				'./images/omikuji_syoukichi.png',
 				'./images/omikuji_kichi.png',
+				'./images/omikuji_kichi.png',
+				'./images/omikuji_suekichi.png',
 				'./images/omikuji_suekichi.png',
 				'./images/omikuji_kyou.png',
 				'./images/omikuji_daikyou.png'
