[feat]フォントを修正

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 		<link href="https://fonts.googleapis.com/css2?family=M+PLUS+1:wght@100;500&family=Shippori+Mincho+B1:wght@800&family=Zen+Maru+Gothic:wght@500&display=swap" rel="stylesheet">
 		<script src="./javascript/jquery.min.js" type="text/javascript"></script>
 		<script src="./javascript/wScratchPad.js" type="text/javascript"></script>
+		<title>年賀状</title>
 	</head>
 	<div id="header">
-        おみくじ付き年賀状
+        謹賀新年
     </div>
 	<div id="sentence">
 		あけましておめでとうございます!!<br>
-		今年もよろしくね～
+		🐉2024年もよろしくね～🐉
 	</div>
 	<body>
 		<div id="wScratchPad"></div>
